--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.codehub.components</groupId>
-    <artifactId>singer</artifactId>
+    <artifactId>ThisIsAChangedName</artifactId>
     <packaging>jar</packaging>
     <version>0.2.7-SNAPSHOT</version>
 
